fixed footer spacing and added media component to header

--- a/front-end/src/scss/components/_footer.scss
+++ b/front-end/src/scss/components/_footer.scss
@@ -27,7 +27,7 @@
       }
 
       @include u.breakpoint-min(lg) {
-        height: 38vh;
+        height: 42vh;
       }
     }
   }
