--- a/front-end/src/scss/components/_header.scss
+++ b/front-end/src/scss/components/_header.scss
@@ -40,7 +40,7 @@
         gap: 2rem;
 
         .searchIcon {
-          font-size: 1.85rem;
+          font-size: 2.35rem;
           margin-inline: auto;
           color: var(--color-primary);
           cursor: pointer;
@@ -114,6 +114,27 @@
               color: var(--color-primary);
               text-shadow: 2px 2px 2px var(--background-secondary);
             }
+          }
+        }
+      }
+    }
+  }
+
+  .navMedia {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.65rem;
+
+    &__link {
+      a {
+        svg {
+          width: 1.65rem;
+          height: 1.65rem;
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            color: var(--background-secondary);
           }
         }
       }
